# ordo

./: .env.example  .eslintrc  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  Cargo.toml  LICENSE  Ordo API.postman_collection.json  README.md  api.md  bun.lockb  bunfig.toml  commitlint.config.js  craco.config.js  errors.js  files-api.postman_collection  gatsby-browser.js  gatsby-config.js  index.js  jest.config.ts  license  migrate.js  nx.json  ordo-api.json  ordo-api.postman_collection  package-lock.json  package.json  postman-collection.json  readme.md  tailwind.config.cjs  tailwind.config.js  tsconfig.base.json  tsconfig.json  utils.js  webpack.config.js  webpack.main.config.js  webpack.plugins.js  (+2 more)
.github/: CODEOWNERS  code-of-conduct.md  contributing.md  funding.yml  pull-request-template.md  pull_request_template.md  security.md  support.md
.husky/: commit-msg  pre-commit  pre-push  prepare-commit-msg
.storybook/: main.js
apps/crypto/: Cargo.toml  bench.lua  project.json
apps/crypto/src/: main.rs
assets/: ordo-macos.icns  site.webmanifest
boot/: boot.sh
core/: create-ordo-directory.js  create-ordo-file.js  is-directory.js  list-directory.js  package-lock.json  package.json  readme.md  sort-ordo-directory.js  webpack.config.js
i18n/: en.json  ru.json
ordo-backend-universal/: jest.config.js  package-lock.json  package.json  webpack.config.js
ordo-client/: api.html  package-lock.json  package.json  readme.md  tailwind.config.js  tsconfig.json
ordo-electron/: ism.md  package.json  prettier.config.js  (+1 more)
(+3851 files in other folders)
